  available. See man calloc.

* Should re-do initial.sp to use X'WX with initial W. Also base on 
  Frobenious norm.

* should set fscale from get.null.coef

* Some error message translation files need updating.

* predict.gam and plot.gam "iterms" and `seWithMean' options
  don't deal properly with case in which centering constraints 
  are not conventional sum to zero ones.

1.5-6

* `smoothCon' and `PredictMat' modified so that sparse smooths can
   optionally have sparse centering constraints applied. 

* `gamm' fix: prediction and visualization from `x$gam' where x is a 
  fitted `gamm' object should not require the random effects to be 
  provided. Now it doesn't.

* minor bug fix: a model with no penalties except a fixed one would fail
  with an index error. 

* `te' terms are now only subject to centering constraints if all 
  marginals would usually have a centering constraint. 

* `te' no longer resets multi-dimensional marginals to "tp", unless 
  they have been set to "cr", "cs", "ps" or "cp". This allows tensor
  products with user supplied smooths.

* Example of obtaining derivatives of a smooth (with CIs) added to 
  `predict.gam' help file.

* `newdata.guaranteed' argument to predict.gam didn't work. fixed.

1.5-5

* `gamm.setup' made an assumption about basis dimensions which was not 
  true for tensor products involving the "cc" basis. This is now fixed.

1.5-4

* smooth.construct.tensor.smooth.spec modified, so that 
  re-parameterization in terms of function values is only if it's 
  stable, and by default the parameters are function values with
  even spacing. Otherwise it was possible for tensor products of
  p-splines to fail.

1.5-3

* `gam' now attempts to coerce `data' to a data frame, if it is not 
  already a list or a data frame, provided that it is already an object 
  that model.frame can deal with. This is to support an undocumented 
  feature of versions prior to 1.5-2 that `data' could actually be 