@@ -1045,7 +1045,9 @@ smooth.construct.ad.smooth.spec<-function(object,data,knots)
       S <- list();l<-0
       for (i in 1:k) {
         S[[i]] <- t(Db)%*%(as.numeric(V[,i])*Db)
-        pspl$rank[i] <- sum(rowSums(abs(S[[i]]))>0)
+        ind <- rowSums(abs(S[[i]]))>0
+        ev <- eigen(S[[i]][ind,ind],symmetric=TRUE,only.values=TRUE)$values
+        pspl$rank[i] <- sum(ev>max(ev)*.Machine$double.eps^.9)
       }
       pspl$S <- S
     }
@@ -1081,9 +1083,9 @@ smooth.construct.ad.smooth.spec<-function(object,data,knots)
       Db <- D2(ni=k[1],nj=k[2]) ## get the difference-on-grid matrices
       pspl$S <- list() ## delete original S list
       if (kp.tot==1) { ## return a single fixed penalty
-        pspl$S[[1]] <- t(Db[[1]])%*%Db[[1]] + t(Db[[2]])%*%Db[[2]] 
-                                          + t(Db[[3]])%*%Db[[3]]
-
+        pspl$S[[1]] <- t(Db[[1]])%*%Db[[1]] + t(Db[[2]])%*%Db[[2]] +
+                       t(Db[[3]])%*%Db[[3]]
+        pspl$rank <- ncol(pspl$S[[1]]) - 3
       } else { ## adaptive 
         if (kp.tot==3) { ## planar adaptiveness
           V <- cbind(rep(1,k.tot),Db[[4]],Db[[5]])
@@ -1104,8 +1106,8 @@ smooth.construct.ad.smooth.spec<-function(object,data,knots)
       
         S <- list()
         for (i in 1:kp.tot) {
-          S[[i]] <- t(Db$Drr)%*%(as.numeric(Vrr[,i])*Db$Drr) + t(Db$Dcc)%*%(as.numeric(Vcc[,i])*Db$Dcc)
-                    + t(Db$Dcr)%*%(as.numeric(Vcr[,i])*Db$Dcr)
+          S[[i]] <- t(Db$Drr)%*%(as.numeric(Vrr[,i])*Db$Drr) + t(Db$Dcc)%*%(as.numeric(Vcc[,i])*Db$Dcc) +
+                    t(Db$Dcr)%*%(as.numeric(Vcr[,i])*Db$Dcr)
           ev <- eigen(S[[i]],symmetric=TRUE,only.values=TRUE)$values
           pspl$rank[i] <- sum(ev>max(ev)*.Machine$double.eps*10)
         }
@@ -1120,171 +1122,6 @@ smooth.construct.ad.smooth.spec<-function(object,data,knots)
 }
 
 
-
-smooth.construct.ad1.smooth.spec<-function(object,data,knots)
-## an adaptive p-spline constructor method function
-## This version is the original 1.4 release --- it's way over-complicated and
-## a much simpler scheme is as good, and much more efficient...
-{ bs <- object$xt$bs
-  if (is.null(bs)) { ## use default bases  
-    bs <- c("ps","ps")
-  } else { # bases supplied, need to sanity check
-    if (!bs[1]%in%c("cc","cr","ps","cp")) bs[1] <- "ps"
-    if (length(bs)==1) bs[2] <- bs[1]
-    if (!bs[2]%in%c("cr","ps","tp","cc","cp")) bs[2] <- "ps"
-  }
-  if (object$dim> 2 )  stop("the adaptive smooth class is limited to 1 or 2 covariates.")
-  else if (object$dim==1) { ## following is 1D case...
-    if (object$bs.dim < 0) object$bs.dim <- 40 ## default
-    if (is.na(object$p.order[1])) object$p.order[1] <- 5
-    pobject <- object
-    pobject$p.order <- c(2,2)
-    class(pobject) <- paste(bs[1],".smooth.spec",sep="")
-    ## get basic spline object...
-    if (is.null(knots)&&bs[1]%in%c("cr","cc")) { ## must create knots
-      x <- data[[object$term]]
-      knots <- list(seq(min(x),max(x),length=object$bs.dim))
-      names(knots) <- object$term
-    } ## end of knot creation
-    pspl <- smooth.construct(pobject,data,knots)
-    nk <- ncol(pspl$X)
-    k <- object$p.order[1]   ## penalty basis size 
-    if (k>=nk-2) stop("penalty basis too large for smoothing basis")
-    if (k <= 0) { ## no penalty 
-      pspl$fixed <- TRUE
-      pspl$S <- NULL
-    } else if (k>=2) { ## penalty basis needed ...
-      x <- 1:(nk-2)/nk;m=2
-      ## All elements of V must be >=0 for all S[[l]] to be +ve semi-definite 
-      if (k==2) V <- cbind(rep(1,nk-2),x) else if (k==3) {
-         if (bs[2]=="ps") m <- 1
-         ps2 <- smooth.construct(s(x,k=k,bs=bs[2],m=m,fx=TRUE),data=data.frame(x=x),knots=NULL)
-         V <- ps2$X
-      } else { ## general penalty basis construction...
-        ps2 <- smooth.construct(s(x,k=k,bs=bs[2],m=m,fx=TRUE),data=data.frame(x=x),knots=NULL)
-        V <- ps2$X
-      }
-      if (min(V)<0) V <- V - min(V)  ## ensure all +ve definite
-      Db<-diff(diff(diag(nk))) ## base difference matrix
-      D <- list()
-      for (i in 1:k) D[[i]] <- as.numeric(V[,i])*Db
-      L <- matrix(0,k*(k+1)/2,k)
-      S <- list();l<-0
-      for (i in 1:k) for (j in i:k) { ## creating penalty coefficient list and L
-        if (sum(V[,i]*V[,j])!=0) { ## then don't drop term!
-          l <- l+1
-          if (i==j) {
-            S[[l]] <- t(D[[i]])%*%D[[i]];
-            L[l,i] <- 2
-          } else{
-            S[[l]] <- t(D[[i]])%*%D[[j]];
-            S[[l]] <- S[[l]] + t(S[[l]])
-            L[l,j] <- L[l,i] <- 1
-          }
-          pspl$rank[l] <- sum((V[,i]*V[,j])!=0)
-        }
-      } ## penalty coefficient matrix list finished
-      L <- L[1:l,] ## in case some potential S[[l]]'s were dropped
-      pspl$S <- S
-      pspl$L <- L
-    }
-  } else if (object$dim==2){ ## 2D case 
-    ## first task is to obtain a tensor product basis
-    object$bs.dim[object$bs.dim<0] <- 15 ## default
-    k <- object$bs.dim;if (length(k)==1) k <- c(k[1],k[1])
-    tec <- paste("te(",object$term[1],",",object$term[2],",bs=bs[1],k=k,m=2)",sep="")
-    pobject <- eval(parse(text=tec)) ## tensor smooth specification object
-    pobject$np <- FALSE ## do not re-parameterize
-    if (is.null(knots)&&bs[1]%in%c("cr","cc")) { ## create suitable knots 
-      for (i in 1:2) {
-        x <- data[[object$term[i]]]
-        knots <- list(seq(min(x),max(x),length=k[i]))
-        names(knots)[i] <- object$term[i]
-      } 
-    } ## finished knots
-    pspl <- smooth.construct(pobject,data,knots) ## create basis
-    ## now need to create the adaptive penalties...
-    ## First the penalty basis...
-    kp <- object$p.order
-    if (bs[2]=="tp") { 
-      kp <- kp[1] 
-      if (is.na(kp)) kp <- 10 ## default
-    } else {
-      if (length(kp)!=2) kp <- c(kp[1],kp[1])
-      kp[is.na(kp)] <- 3 ## default
-    }
-    kp.tot <- prod(kp);k.tot <- (k[1]-2)*(k[2]-2) ## rows of Difference matrices   
-    if (kp.tot > (k[1]-2)*(k[2]-2)) stop("penalty basis too large for smoothing basis") 
-    
-    if (kp.tot <= 0) { ## no penalty 
-      pspl$fixed <- TRUE
-      pspl$S <- NULL
-    } else { ## penalized, but how?
-      Db <- D2(ni=k[1],nj=k[2]) ## get the difference-on-grid matrices
-      pspl$S <- list() ## delete original S list
-      if (kp.tot==1) { ## return a single fixed penalty
-        pspl$S[[1]] <- t(Db[[1]])%*%Db[[1]] + t(Db[[2]])%*%Db[[2]] 
-                                          + t(Db[[3]])%*%Db[[3]]
-
-      } else { ## adaptive 
-        if (kp.tot==3) { ## planar adaptiveness
-          V <- cbind(rep(1,k.tot),Db[[4]],Db[[5]])
-        } else { ## spline adaptive penalty...
-          ## first check sanity of basis dimension request
-          ok <- TRUE
-          if (bs[2]=="tp"&&kp<4) ok <- FALSE
-          if (bs[2]%in%c("cp","ps") && sum(kp<2)) ok <- FALSE
-          if (bs[2]=="cr"&&sum(kp<3)) ok <- FALSE
-          if (bs[2]=="cc"&&sum(kp<4)) ok <- FALSE
-          if (!ok) stop("penalty basis too small")
-          if (bs[2]%in%c("cp","ps")) { m <- min(min(kp)-2,1); m<-c(m,m)} else m <- 2
-          if (bs[2]=="tp") {
-            ps2 <- smooth.construct(s(i,j,k=kp,bs="tp",fx=TRUE),
-                                  data=data.frame(i=Db$ri,j=Db$ci),knots=NULL)
-
-          } else  ps2 <- smooth.construct(te(i,j,bs=bs[2],k=kp,fx=TRUE,m=m,np=FALSE),
-                                data=data.frame(i=Db$ri,j=Db$ci),knots=NULL) 
-          V <- ps2$X
-          if (min(V)<0) V <- V - min(V) ## V must be +ve or S[[l]] may not be pos semi def
-        } ## spline adaptive basis finished
-        ## build penalty list and L
-        Dr <- Dc <- Dcr <- list()
-        for (i in 1:ncol(V)) { 
-          Dr[[i]] <- as.numeric(V[,i])*Db$Drr
-          Dc[[i]] <- as.numeric(V[,i])*Db$Dcc
-          Dcr[[i]] <- as.numeric(V[,i])*Db$Dcr
-        }
-
-        L <- matrix(0,kp.tot*(kp.tot+1)/2,kp.tot)
-        S <- list();l<-0
-        for (i in 1:kp.tot) for (j in i:kp.tot) { ## creating penalty coefficient list and L
-          if (sum(V[,i]*V[,j])!=0) { ## then don't drop term
-             l <- l+1 
-             if (i==j) { 
-               S[[l]] <- t(Dr[[i]])%*%Dr[[i]] + t(Dc[[i]])%*%Dc[[i]] + 
-                         t(Dcr[[i]])%*%Dcr[[i]]
-               L[l,i] <- 2
-            } else{
-              S1 <- t(Dr[[i]])%*%Dr[[j]];S1 <- S1 + t(S1)
-              S2 <- t(Dc[[i]])%*%Dc[[j]];S2 <- S2 + t(S2)
-              S3 <- t(Dcr[[i]])%*%Dcr[[j]];S3 <- S3 + t(S3)
-              S[[l]] <- S1 + S2 + S3
-              L[l,j] <- L[l,i] <- 1
-            }
-            ## theory fails me, but in the grand scheme of things the following
-            ## is cheap...
-            ev <- eigen(S[[l]],symmetric=TRUE,only.values=TRUE)$values
-            pspl$rank[l] <- sum(ev>max(ev)*.Machine$double.eps*10)
-          }
-        } ## penalty coefficient matrix list finished
-        L <- L[1:l,] ## in case some potential S[[l]]'s were dropped
-        pspl$L <- L
-        pspl$S <- S
-      } ## adaptive penalty finished
-    } ## penalized case finished
-  } 
-  pspl
-}
 
 
 
